Fixed nav menu and main content stretch

--- a/BudgetVisualization/wwwroot/css/app.css
+++ b/BudgetVisualization/wwwroot/css/app.css
@@ -371,7 +371,7 @@ app {
 
     .sidebar {
         width: 250px;
-        height: 100vh;
+        height: 100%;
         position: sticky;
         top: 0;
     }
@@ -418,8 +418,9 @@ app {
 
     .sidebarApp {
         width: 110px;
-        height: 100vh;
+        height: 100%;
         background-color: whitesmoke;
+        min-height: 100vh;
     }
 
     .carousell-result {
@@ -536,7 +537,6 @@ app {
         background: #EAEAEA;
         padding-top: 2.5em;
         padding-left: 1.5em;
-        height: 100vh;
         width: 100%;
         min-width: 360px;
     }
@@ -553,6 +553,7 @@ app {
 
     .page-container {
         display: flex;
+        min-height: 100vh;
     }
 
     .main-image {
